--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,26 @@ on:
     branches: [ main ]
 
 jobs:
+  test:
+    name: Test Docker Build
+    runs-on: self-hosted
+
+    steps:
+        - name: Checkout repository
+          uses: actions/checkout@v4
+          with:
+            clean: false
+
+        - name: Copy env file
+          run: cp ~/envs/socially_app.env .env
+
+        - name: Test Docker Compose build
+          run: docker compose build
+
   deploy:
     name: Deploy to self-hosted server
     runs-on: self-hosted
+    needs: test
 
     steps:
       - name: Checkout repository
@@ -18,8 +35,13 @@ jobs:
       - name: Copy env file
         run: cp ~/envs/socially_app.env .env
 
-      - name: Set up Docker Compose
+      - name: Build docker images
+        run: docker compose build
+
+      - name: Restart Services
         run: |
           docker compose down
-          docker compose pull
-          docker compose up -d --build --remove-orphans
+          docker compose up -d --remove-orphans
+
+      - name: Clean up unused images
+        run: docker image prune -af
