remove docker compose down in deploy step (deploy.yml)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,7 @@ jobs:
 
     steps:
       - name: Restart Services
-        run: |
-          docker compose down
-          docker compose up -d --remove-orphans
+        run: docker compose up -d --remove-orphans
 
       - name: Clean up unused images
         run: docker image prune -af
