added posts logic, changed field images count to images_exts in post model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - /home/ebobola/data/socially_app/external_avatars:/files/external_avatars
       - /home/ebobola/data/socially_app/apks:/files/apks
+      - /home/ebobola/data/socially_app/posts:/files/posts
+      - /home/ebobola/data/socially_app/messages:/files/messages
     expose:
       - "${SERVER_PORT}"
     depends_on:
