--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -27,4 +27,15 @@ server {
 	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
+	location /temp_media/ {
+	    rewrite ^/temp_media/(.*)$ /$1 break;
+
+	    proxy_pass http://minio:9000;
+
+	    proxy_set_header X-Real-IP $remote_addr;
+	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	    proxy_pass_request_headers on;
+	    proxy_pass_request_body on;
+	}
 }
